--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
     <canvas></canvas>
     <script src="js/jquery-1.9.1.min.js"></script>
+    <script src="js/underscore.min.js"></script>
+    <script src="js/tetromino.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
