--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
     <title>Tetris &middot; by Pedro Cunha</title>
-
     <link rel="stylesheet" href="css/app.css">
   </head>
 
   <body>
-    <canvas></canvas>
+    <div id="gamescreen" class="gamescreen"></div>
+
     <script src="js/jquery-1.9.1.min.js"></script>
     <script src="js/underscore.min.js"></script>
     <script src="js/tetromino.js"></script>
