--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -10,7 +10,8 @@
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="../js/underscore-min.js"></script>
+  <script type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
+  <script type="text/javascript" src="../js/underscore.min.js"></script>
   <script type="text/javascript" src="../js/tetromino.js"></script>
 
   <!-- include spec files here... -->
