--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -16,7 +16,7 @@
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
-  <script type="text/javascript" src="spec/TretominoSpec.js"></script>
+  <script type="text/javascript" src="spec/TetrominoSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
