Adds Game class

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -13,10 +13,12 @@
   <script type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
   <script type="text/javascript" src="../js/underscore.min.js"></script>
   <script type="text/javascript" src="../js/tetromino.js"></script>
+  <script type="text/javascript" src="../js/game.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
   <script type="text/javascript" src="spec/TetrominoSpec.js"></script>
+  <script type="text/javascript" src="spec/GameSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
