--- a/test/spec_runner.html
+++ b/test/spec_runner.html
@@ -16,9 +16,9 @@
   <script type="text/javascript" src="../js/game.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/SpecHelper.js"></script>
-  <script type="text/javascript" src="spec/TetrominoSpec.js"></script>
-  <script type="text/javascript" src="spec/GameSpec.js"></script>
+  <script type="text/javascript" src="spec/spec_helper.js"></script>
+  <script type="text/javascript" src="spec/tetromino_spec.js"></script>
+  <script type="text/javascript" src="spec/game_spec.js"></script>
 
   <script type="text/javascript">
     (function() {
