First drawing prototype

--- a/test/spec_runner.html
+++ b/test/spec_runner.html
@@ -9,15 +9,15 @@
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
-  <!-- include source files here... -->
   <script type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
   <script type="text/javascript" src="../js/underscore.min.js"></script>
   <script type="text/javascript" src="../js/tetromino.js"></script>
+  <script type="text/javascript" src="../js/tetromino_presenter.js"></script>
   <script type="text/javascript" src="../js/game.js"></script>
 
-  <!-- include spec files here... -->
   <script type="text/javascript" src="spec/spec_helper.js"></script>
   <script type="text/javascript" src="spec/tetromino_spec.js"></script>
+  <script type="text/javascript" src="spec/tetromino_presenter_spec.js"></script>
   <script type="text/javascript" src="spec/game_spec.js"></script>
 
   <script type="text/javascript">
