--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
   </head>
 
   <body>
-    <div id="gamescreen" class="gamescreen"></div>
+    <canvas id="gamescreen" class="gamescreen"></canvas>
 
     <script src="js/jquery-1.9.1.min.js"></script>
     <script src="js/underscore.min.js"></script>
+    <script src="js/keymaster.min.js"></script>
     <script src="js/tetromino.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/tetromino_presenter.js"></script>
+    <script src="js/game_presenter.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
