--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <a href="https://github.com/pedrocunha/tetris.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
     <canvas id="gamescreen" class="gamescreen"></canvas>
 
     <script src="js/underscore.min.js"></script>
