--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
     <script src="js/tetromino_presenter.js"></script>
     <script src="js/game_presenter.js"></script>
     <script src="js/app.js"></script>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-42612196-2', 'tetris-js.herokuapp.com');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
