Let's have jquery back
This reverts commit a1bdcd0aae9d76f546109ceb64d27dd1a5449130.

--- a/test/spec_runner.html
+++ b/test/spec_runner.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
+  <script type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
   <script type="text/javascript" src="../js/underscore.min.js"></script>
   <script type="text/javascript" src="../js/tetromino.js"></script>
   <script type="text/javascript" src="../js/tetromino_presenter.js"></script>
