--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="https://github.com/pedrocunha/tetris.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
     <canvas id="gamescreen" class="gamescreen"></canvas>
 
+    <script src="js/jquery-1.9.1.min.js"></script>
     <script src="js/underscore.min.js"></script>
     <script src="js/keymaster.min.js"></script>
     <script src="js/tetromino.js"></script>
