--- a/index.html
+++ b/index.html
@@ -4,11 +4,38 @@
     <meta charset="utf-8" />
     <title>Tetris &middot; by Pedro Cunha</title>
     <link rel="stylesheet" href="css/app.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
     <a href="https://github.com/pedrocunha/tetris.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
-    <canvas id="gamescreen" class="gamescreen"></canvas>
+    <div class="gamescreen">
+      <a href="#" class="pause">||</a>
+      <div class="canvasContainer">
+        <canvas id="gameCanvas"></canvas>
+        <div class="tooltip">
+          <dl>
+            <dt>&larr;</dt>
+            <dd>moves tetromino to the left</dd>
+
+            <dt>&rarr;</dt>
+            <dd>moves tetromino to the right</dd>
+
+            <dt>&darr;</dt>
+            <dd>moves tetromino to the left</dd>
+
+            <dt>↩ </dt>
+            <dd>rotates tetromino</dd>
+
+            <dt>p</dt>
+            <dd>pauses the game</dd>
+          </dl>
+        </div>
+       </div>
+
+
+    </div>
+
 
     <script src="js/jquery-1.9.1.min.js"></script>
     <script src="js/underscore.min.js"></script>
