Fix typo on help

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <dd>moves tetromino to the right</dd>
 
             <dt>&darr;</dt>
-            <dd>moves tetromino to the left</dd>
+            <dd>moves tetromino down</dd>
 
             <dt>↩ </dt>
             <dd>rotates tetromino</dd>
